fix: website header too narrow on large screens
On larger screens, the website header wouldn't stretch to the full page width.

--- a/website/styles.css
+++ b/website/styles.css
@@ -24,6 +24,10 @@ html[data-theme='dark'] {
   --ifm-menu-color-background-active: #fff;
 }
 
+.navbar--fixed-top {
+  width: 100%;
+}
+
 .navbar__items {
   color: #fff;
 }
